Tue Jan 11 20:44:30 2005 Huang-Ming Huang <hh1@cse.wustl.edu>
  
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/FTRT_Group_Manager
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/IOGRMaker.h
        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/IOGRMaker.cpp
          
          Fixed problem with the scenario when the secondary event 
          channel crashes and a new backup joins in the object group.
          Thanks for Thia Chang Chao for reporting the problem.
          
        * orbsvcs/FTRT_Event_Service/Event_Service/FT_EventService.cpp
        * orbsvcs/FTRT_Event_Service/ftec
        * orbsvcs/FTRT_Event_Service/supplier
        
          Added debug options.

Tue Jan 11 14:49:40 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/driver/drv_preproc.cpp:
        
          Added close of temporary file created only inside
          #ifndef ACE_LACKS_MKSTEMP guard. Thanks to
          M. C. Gahan <mcgahan@sparta.com> for reporting the
          problem of the dangling descriptor. This fix closes
          [BUGID:2026].

Tue Jan 11 12:17:26 2005  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/CosNaming.mpc:

          List the naming_serv_export.h instead of Naming_Server.h. 
          Naming_Server.h gets added automatically.

        * orbsvcs/orbsvcs/FaultTolerance.mpc:

          Removed a redundant listing of FT_CORBAC.cpp.

        * orbsvcs/orbsvcs/RTEvent.mpc:

          Moved two files listed in Source_Files into Template_Files as they
          are template cpp files.

        * orbsvcs/orbsvcs/RTOLDEvent.mpc:

          Removed the listing of RTOldEvent.rc.  MPC will now detect that it
          belongs to the RTOLDEvent project due to case insensitivity for
          resource files.

Mon Jan 10 18:26:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
          When the IORInterceptor Adapter is requested but can't be